# app-manifest

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: technical-writer.md
.claude/commands/: test.md  update-docs.md
docs/: README.md  architecture.md  commands.md  configuration.md  convert.md  design-decisions.md  examples.md  getting-started.md  manifest-assembly.md  mini-manifests.md  purl.md  usage.md
src/app_manifest/: __main__.py  cli.py
src/app_manifest/models/: config.py  cyclonedx.py  dd.py  metadata.py  regdef.py
src/app_manifest/schemas/: application-manifest.schema.json
src/app_manifest/services/: _amv2_to_dd.py  _dd_to_amv2.py  artifact_fetcher.py  component_builder.py  config_loader.py  dd_converter.py  helm_fetcher.py  manifest_builder.py  metadata_loader.py  purl.py  regdef_loader.py  validator.py
tests/: test_cli.py  test_config.py  test_cyclonedx.py  test_dd_converter.py  test_e2e.py  test_fetch_component.py  test_generate_component.py  test_manifest_builder.py  test_metadata.py  test_purl.py  test_validator.py
tests/fixtures/configs/: cloud_integration_platform_config.yaml  cloud_integration_platform_full_config.yaml  jaeger_full_config.yaml  minimal_config.yaml  mixed_pipeline_config.yaml  monitoring_config.yaml  qip_config.yaml
tests/fixtures/dd/: cloud_integration_platform_dd.json  cloud_integration_platform_full_dd.json
tests/fixtures/examples/: example_jaeger_manifest.json  jaeger_manifest.json
tests/fixtures/metadata/: docker_metadata.json  envoy_metadata.json  helm_metadata.json  qip_engine_metadata.json  (+6 more)
(+2 files in other folders)
